fix refresh of searcher not working, rename servlet